# Prospector

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  PROGRESS.md  README.md  SECURITY.md  candidates.csv  lead_qualifier_feature.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
prospector/: __init__.py  agent_draft.py  cli.py  clipboard.py  config.py  dm.py  draft.py  enrich.py  extract.py  fetch.py  gmail.py  ingest.py  instructions.py  ledger.py  models.py  pipeline.py  resolve.py  score.py  send.py  smtp_send.py  source.py  transport.py  vault.py
prospector/agent/: CONSTRAINTS.md  IDENTITY.md  OFFER.md
prospector/data/: first_names.txt  free_providers.txt  us_metros.txt
samples/: companies.example.csv
specs/001-prospector-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-company-sourcing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-approved-send/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-provider-transport/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-omniveer-branding/: plan.md  spec.md  tasks.md
specs/006-agentic-drafting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-assisted-messenger/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/integration/: conftest.py  (+10 more)
(+70 files in other folders)
