[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prospector"
version = "0.1.0"
description = "Researches home-service companies on the open web and drafts personalized outreach into an Obsidian vault. Never sends, never touches Facebook."
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "selectolax>=0.3",
    "trafilatura>=1.8",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[project.scripts]
prospector = "prospector.cli:app"

[tool.setuptools.packages.find]
include = ["prospector*"]

[tool.setuptools.package-data]
prospector = ["data/*.txt", "agent/*.md", "agent/skills/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
